--- a/css/base.css
+++ b/css/base.css
@@ -19,6 +19,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 body{
     font-size: 62.5%; /* 10px */
