--- a/css/base.css
+++ b/css/base.css
@@ -29,7 +29,7 @@ body{
     display: flex;
     flex-direction: column;
     background: #0d202b;
-    /* overflow: hidden; */
+    overflow-x: hidden;
 }
 
 /* Animation */
